--- a/app.css
+++ b/app.css
@@ -1,1 +1,150 @@
+@charset "utf-8";
 
+html,
+body {
+    font-family: system-ui, -apple-system, sans-serif;
+    font-style: normal;
+    -webkit-text-size-adjust: 100%;
+    -ms-text-size-adjust: 100%;
+    text-size-adjust: 100%;
+    scroll-behavior: smooth;
+    user-select: none;
+    -webkit-user-select: none;
+}
+
+body {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #eee;
+}
+
+*,
+*::after,
+*::before {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+}
+
+a {
+    outline: 0;
+    color: inherit;
+    text-decoration: none;
+}
+
+p {
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 1.5;
+}
+
+section {
+    display: flex;
+    width: 320px;
+    height: calc(100vh - 140px);
+    margin-top: 80px;
+    border: 1px solid sandybrown;
+    background-color: #fff;
+}
+
+ul {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 10px;
+}
+
+li {
+    display: flex;
+    list-style: none;
+    font-size: 12px;
+    font-weight: 500;
+    padding: 4px 8px;
+    border-radius: 4px;
+    border: 1px solid #000;
+}
+
+.cards {
+    display: flex;
+    align-items: stretch;
+    flex-direction: column;
+    width: 100%;
+    padding: 24px;
+}
+
+.job {
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-end;
+    flex-direction: column;
+    gap: 12px;
+    width: 100%;
+    height: 100%;
+    padding: 24px;
+    border-radius: 12px;
+    border: 1px solid salmon;
+}
+
+.job p {
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    line-clamp: 3; 
+    -webkit-box-orient: vertical;
+}
+
+nav {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 320px;
+    height: 80px;
+    padding: 0 24px;
+    margin: 0 auto;
+    background-color: #fff;
+    border: 1px solid #000;
+}
+
+.profile {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+}
+
+.profile img {
+    border-radius: 50%;
+}
+
+footer {
+    position: fixed;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    width: 320px;
+    height: 60px;
+    margin: 0 auto;
+    background-color: #fff;
+    border: 1px solid #000;
+}
+
+.link {
+    display: flex;
+}
+
+.link img {
+    width: 24px;
+    height: 24px;
+}
+
+@media only screen and (max-width: 920px) {
+
+}
