--- a/app.css
+++ b/app.css
@@ -42,8 +42,8 @@ p {
 
 section {
     display: flex;
-    width: 320px;
-    height: calc(100vh - 140px);
+    width: 100%;
+    height: calc(100vh - 160px);
     margin-top: 80px;
     border: 1px solid sandybrown;
     background-color: #fff;
@@ -99,14 +99,12 @@ nav {
     position: fixed;
     top: 0;
     left: 0;
-    right: 0;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    width: 320px;
+    width: 100%;
     height: 80px;
     padding: 0 24px;
-    margin: 0 auto;
     background-color: #fff;
     border: 1px solid #000;
 }
@@ -124,13 +122,12 @@ nav {
 footer {
     position: fixed;
     left: 0;
-    right: 0;
     bottom: 0;
     display: flex;
     align-items: center;
     justify-content: space-evenly;
-    width: 320px;
-    height: 60px;
+    width: 100%;
+    height: 80px;
     margin: 0 auto;
     background-color: #fff;
     border: 1px solid #000;
