--- a/app.css
+++ b/app.css
@@ -10,6 +10,7 @@ body {
     scroll-behavior: smooth;
     user-select: none;
     -webkit-user-select: none;
+    background-color: #fff;
 }
 
 body {
@@ -41,6 +42,16 @@ p {
     font-size: 14px;
     font-weight: 400;
     line-height: 1.5;
+}
+
+button {
+    appearance: none;
+    -webkit-appearance: none;
+}
+
+input {
+    appearance: none;
+    -webkit-appearance: none;
 }
 
 section {
@@ -81,32 +92,46 @@ li {
 .cards button {
     position: absolute;
     bottom: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background-color: #fff;
     z-index: 666;
+    border: 0;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
+}
+
+.cards button svg {
+    width: 24px;
+    width: 24px;
 }
 
 .nope {
-    right: 0;
+    left: 0;
+    transform: translate(-10px,10px);
 }
 
 .love {
-    left: 0;
+    right: 0;
+    transform: translate(10px,10px);
 }
 
 .job {
     position: absolute;
     top: 0;
     left: 0;
-    right: 0;
     display: flex;
     align-items: flex-start;
     justify-content: flex-end;
     flex-direction: column;
     gap: 12px;
-    width: 90vw;
-    max-width: 400px;
-    height: 70vh;
+    width: 100%;
+    height: 100%;
     padding: 24px;
-    margin: 0 auto;
+    padding-bottom: 40px;
     border-radius: 12px;
     background-color: #fff;
     border: 1px solid salmon;
