--- a/app.css
+++ b/app.css
@@ -81,7 +81,7 @@ li {
     font-weight: 500;
     padding: 4px 8px;
     border-radius: 4px;
-    border: 1px solid #000;
+    background-color: rgba(255, 255, 255, 0.2);
 }
 
 .cards {
@@ -130,9 +130,12 @@ li {
     width: 100%;
     height: 100%;
     padding: 24px;
+    color: #fff;
     border-radius: 12px;
-    background-color: #fff;
-    border: 1px solid #eee;
+    background-image: url(cover.jpg);
+    background-position: center center;
+    background-size: cover;
+    overflow: hidden;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
     transition: all 0.3s ease-in-out;
     will-change: transform;
@@ -142,6 +145,14 @@ li {
 .job.moving {
     transition: none;
     cursor: grabbing;
+}
+
+.job h2 {
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    line-clamp: 1; 
+    -webkit-box-orient: vertical;
 }
 
 .job p {
